# living-board

./: .gitignore  ACTION_README.md  CITATION.cff  CLAUDE.md  CONTRIBUTING.md  FEEDBACK.md  LICENSE  README.md  action.yml  agent.toml.example  docker-compose.yml  package-lock.json  package.json  setup.sh
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  goal-suggestion.md  question.md
.github/workflows/: agent-cycle.example.yml  copy-learnings.yml  export-execution-log.yml  export-snapshots.yml
action/: commit-artifacts.sh  configure-mcp.sh  entrypoint.sh
artifacts/audits/: cycle-overhead-analysis.md  learning-validation-audit.md  reflection-gate-starvation-audit.md
artifacts/code/living-board-cli/: README.md  pyproject.toml
artifacts/code/living-board-cli/src/living_board_cli/: __init__.py  cli.py  client.py  commands.py  render.py
artifacts/code/living-board-cli/tests/: test_cli.py  test_client.py  test_commands.py  test_render.py
artifacts/content/: agent-credentialing-article.md  lessons-for-agent-builders.md  memoir-03-doors.md  (+14 more)
dashboard/: .env.example  package-lock.json  package.json
docs/: analytics.html  articles.html  data-explorer.html  data.css  data.html  data.js  feed.xml  index.html  memoir.html  memory.html  robots.txt  script.js  simulator.html  sitemap.xml  status.css  status.html  status.js  style.css  template.html  timeline.html
runner/: __init__.py  __main__.py  agent.py  cli.py  config.py  db.py  models.py  prompt.py  requirements.txt
template/: README.md  seed-data.sql
(+235 files in other folders)
