[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "living-board-cli"
version = "0.1.0"
description = "Terminal client for the Living Board autonomous agent schema (Supabase)."
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.10"
authors = [
    { name = "Living Board" },
]
keywords = ["agent", "autonomous", "supabase", "living-board", "cli"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
    "Topic :: Utilities",
]
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7",
]

[project.scripts]
living-board = "living_board_cli.cli:main"
lb = "living_board_cli.cli:main"

[project.urls]
Homepage = "https://github.com/blazov/living-board"
Issues = "https://github.com/blazov/living-board/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
living_board_cli = ["py.typed"]
